--- a/style.css
+++ b/style.css
@@ -1,123 +1,136 @@
 body {
     font-family: sans-serif;
-    background-color: black;
-}
-
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    margin-bottom: 20px;
-}
-
-.button {
-    background-color: #36bbce;
-    color: black;
-    text-decoration: none;
-    padding: 15px;
-    font-size: 24px;
-    border-radius: 10px;
-    display: block;
-}
-
-nav {
-    border-top: 5px solid white;
-    border-bottom: 5px solid white;
-    padding: 25px 100px 25px 95px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav-link {
-    font-size: 24px;
-    color: white;
-    text-decoration: none;
-    display: block;
 }
 
 h1 {
+    font-size: 50px;
     text-align: center;
-    color: white;
-    font-size: 36px;
-    margin-top: 45px;
-    margin-bottom: 40px;
 }
 
-.post-text {
-    font-size: 24px;
-}
-
-.info {
+nav {
+    border-top: 3px solid royalblue;
     display: flex;
-    flex-wrap: wrap;
-    max-width: 1100px;
-    margin: 0 auto;
+    justify-content: space-between;
+    border-bottom: 3px solid royalblue;
 }
 
-.post {
-    background-color: white;
-    padding: 15px 45px 30px 45px;
-    width: 400px;
-    margin: 20px;
-    position: relative;
-}
-
-.article-but {
+nav a {
     text-decoration: none;
-    background-color: #133aac;
-    color: white;
-    font-size: 24px;
+    font-size: 20px;
+    color: navy;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.head_img {
+    width: 700px;
+}
+
+h2 {
+    color: green;
+    margin-left: 100px;
+    font-size: 30px;
+    font-family: cursive;
+}
+
+.catalog a {
+    text-decoration: none;
+    color: black;
+    border-bottom: 1px dotted black;
+    font-size: 20px;
+}
+
+.catalog {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 700px;
+    margin: 0 30px;
+    background-color: lightblue;
+}
+
+.product {
+    width: 150px;
     text-align: center;
-    padding: 10px 75px 10px 75px;
-    display: block;
+    padding: 10px;
+    border: 5px double orange;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color: bisque;
 }
 
-.full-image {
-    margin: 100px 0px 100px 0px;
-}
-
-.social {
-    display: block;
+.product::before {
+    content: url("https://learn.algoritmika.org/uploads/2021/03/paw-155322_1280%201_0_1614946877.png");
     width: 30px;
+    height: 30px;
+    display: block;
+    opacity: 0.5;
+    margin-bottom: 10px;
+}
+
+.product:hover::before {
+    opacity: 1;
+}
+
+.principles {
+    display: flex;
+    border-top: 5px solid navy;
+    border-bottom: 5px solid navy;
+    justify-content: space-between; 
+    width: 700px;
+    margin: 0 30px;
+    padding: 30px;
+    text-align: center;
+}
+
+.principle {
+    width: 120px;
+}
+
+.question-answer {
+    margin: 30px;
+}
+
+.question {
+    color: brown;
+}
+
+.qua-item::before {
+    content: url("https://learn.algoritmika.org/uploads/2021/03/question_0_1614951460.svg");
+    width: 10px;
+    height: 20px;
+    display: inline-block;
+}
+
+.slogan {
+    display: flex;
+    padding: 30px;
+    color: mediumblue;
+    margin-left: 150px;
+}
+
+.slogan_img {
+    padding: 10px;
+    border: 5px solid orange;
+    border-radius: 50%;
+}
+
+.slogan_text {
+    float:left;
+    color: mediumblue;
+    margin: 20px;
+    width: 300px;
 }
 
 footer {
-    background-color: white;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 30px 30px 20px 45px;
+    background-color: darkolivegreen;
+    color: white;
+    padding: 10px;
+    font-size: 20px;
 }
-
-.footer-text {
-    font-size: 24px;
-    margin-right: 30px;
-}
-
-.footer-text span {
-    color: #850AE5;
-    font-weight: bolder;
-}
-.prom{
-    position: fixed;
+.slogan_text::{
+    content: url("/uploads/2021/03/slogan_0_1614961282.svg;");
+    width: 45px;
+    height: 10px;
     display: inline-block;
-    top:225px;
-    right: 0px;
-    background-color: #133aac;
-    width: 200px;
-    border-radius: 5%;
-    text-align: center;
-
-}
-.prom a{
-    padding: 35px;
-}
-.summer{
-   position: relative;
-
-}
-.lalal{
-    width: 50px;
-
 }
